--- a/ModernLookOSXSampleSwift/Controllers/ToolBar.xib
+++ b/ModernLookOSXSampleSwift/Controllers/ToolBar.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16085" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="16092.1" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16092.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,12 +14,12 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="c22-O7-iKe" customClass="MLToolbar" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="851" height="72"/>
+        <customView misplaced="YES" id="c22-O7-iKe" customClass="MLToolbar" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="924" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <gridView xPlacement="leading" yPlacement="bottom" rowAlignment="none" translatesAutoresizingMaskIntoConstraints="NO" id="dZz-3v-kmg">
-                    <rect key="frame" x="0.0" y="0.0" width="851" height="72"/>
+                    <rect key="frame" x="0.0" y="0.0" width="955" height="72"/>
                     <constraints>
                         <constraint firstItem="ceN-6a-tub" firstAttribute="leading" secondItem="UIM-RW-r5x" secondAttribute="trailing" constant="18" id="Pxo-EK-ImZ"/>
                         <constraint firstItem="ceN-6a-tub" firstAttribute="top" secondItem="jCk-N5-vW5" secondAttribute="top" id="vfd-UN-g3M"/>
@@ -32,7 +32,7 @@
                     <columns>
                         <gridColumn width="30" id="Kfg-pT-2LX"/>
                         <gridColumn width="200" id="bTG-6H-XzX"/>
-                        <gridColumn width="21" id="78L-28-c0g"/>
+                        <gridColumn width="125" id="78L-28-c0g"/>
                         <gridColumn width="30" id="Vf5-at-Muo"/>
                         <gridColumn width="20" id="OTS-Jl-7hi"/>
                         <gridColumn width="150" id="xOe-xH-81b"/>
@@ -76,10 +76,24 @@
                                 </connections>
                             </textField>
                         </gridCell>
-                        <gridCell row="k9r-E5-2wk" column="78L-28-c0g" id="YvI-p1-G1n"/>
+                        <gridCell row="k9r-E5-2wk" column="78L-28-c0g" id="YvI-p1-G1n">
+                            <segmentedControl key="contentView" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="VaB-XT-lZp">
+                                <rect key="frame" x="241.5" y="15" width="107" height="23"/>
+                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="selectOne" id="Tdo-xe-JBG">
+                                    <font key="font" metaFont="system"/>
+                                    <segments>
+                                        <segment label="Light" selected="YES"/>
+                                        <segment label="Dark" tag="1"/>
+                                    </segments>
+                                </segmentedCell>
+                                <connections>
+                                    <action selector="appearanceSelection:" target="-2" id="qQq-ws-DNu"/>
+                                </connections>
+                            </segmentedControl>
+                        </gridCell>
                         <gridCell row="k9r-E5-2wk" column="Vf5-at-Muo" id="ugB-8l-fY2">
                             <button key="contentView" tag="1" allowsExpansionToolTips="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jCk-N5-vW5">
-                                <rect key="frame" x="269" y="16" width="27" height="30"/>
+                                <rect key="frame" x="373" y="16" width="27" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="d5d-fu-H4d"/>
                                     <constraint firstAttribute="width" constant="27" id="n7X-S6-eGx"/>
@@ -96,7 +110,7 @@
                         <gridCell row="k9r-E5-2wk" column="OTS-Jl-7hi" id="cwQ-R6-9Bq"/>
                         <gridCell row="k9r-E5-2wk" column="xOe-xH-81b" xPlacement="fill" id="kg6-tE-zUQ">
                             <button key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="Ldw-te-Nya" customClass="MLHoverButton" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
-                                <rect key="frame" x="329" y="13" width="154" height="31"/>
+                                <rect key="frame" x="433" y="13" width="154" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="IKW-gf-A0d"/>
                                 </constraints>
@@ -116,7 +130,7 @@
                         </gridCell>
                         <gridCell row="k9r-E5-2wk" column="DZP-Oh-WPY" id="vml-Jf-ZT7">
                             <button key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="UIM-RW-r5x" customClass="MLCheckbox" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
-                                <rect key="frame" x="485" y="13" width="108" height="31"/>
+                                <rect key="frame" x="589" y="13" width="108" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="26" id="flC-li-yxO"/>
                                     <constraint firstAttribute="width" constant="104" id="m4f-pa-2VZ"/>
@@ -132,7 +146,7 @@
                         </gridCell>
                         <gridCell row="k9r-E5-2wk" column="Be1-SN-h5C" id="8SQ-nr-Qkz">
                             <customView key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="ceN-6a-tub">
-                                <rect key="frame" x="609" y="16" width="100" height="30"/>
+                                <rect key="frame" x="713" y="16" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="zrH-pH-UsL"/>
                                 </constraints>
@@ -140,7 +154,7 @@
                         </gridCell>
                         <gridCell row="k9r-E5-2wk" column="FSc-K7-Yxq" id="tYI-dp-o10">
                             <customView key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="F0z-Fg-PCb">
-                                <rect key="frame" x="715" y="16" width="130" height="34"/>
+                                <rect key="frame" x="819" y="16" width="130" height="34"/>
                                 <subviews>
                                     <button fixedFrame="YES" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="uMN-Tq-7AG">
                                         <rect key="frame" x="34" y="0.0" width="31" height="40"/>
@@ -220,7 +234,7 @@
                 <constraint firstItem="dZz-3v-kmg" firstAttribute="bottom" secondItem="c22-O7-iKe" secondAttribute="bottom" id="cs7-8q-tGd"/>
                 <constraint firstItem="dZz-3v-kmg" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="fwr-cg-zdf"/>
             </constraints>
-            <point key="canvasLocation" x="150.5" y="153.5"/>
+            <point key="canvasLocation" x="150" y="153"/>
         </customView>
         <customObject id="7wC-jl-k1p" customClass="MLRadioGroupManager" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
             <connections>
